--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": "https://github.com/LambdaSchool/webdb-i-challenge",
   "dependencies": {
-    "express": "^4.17.1",
     "knex": "^0.20.13",
     "pg": "^8.0.2",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.3"
   }
 }
